--- a/.chezmoi.toml.tmpl
+++ b/.chezmoi.toml.tmpl
@@ -1,4 +1,7 @@
 [git]
     autoCommit = true
     autoPush = true
-    commitMessageTemplate = "{{ promptString "Commit message" }}"
+    commitMessageTemplate = "{{ promptString \"Commit message\" }}"
+
+[hooks.read-source-state.pre]
+    command = ".local/share/chezmoi/.initial-setup.sh"
