--- a/run_onchange_darwin-install-packages.sh.tmpl
+++ b/run_onchange_darwin-install-packages.sh.tmpl
@@ -14,5 +14,8 @@ cask {{ . | quote }}
 {{ range .apps.darwin -}}
 mas {{ .name | quote }}, id: {{ .id }}
 {{ end -}}
+{{ range .vscode.darwin -}}
+vscode {{ . | quote }}
+{{ end -}}
 EOF
 {{ end -}}
