Fix docker login

--- a/run_once_login-to-docker-reigstries.sh.tmpl
+++ b/run_once_login-to-docker-reigstries.sh.tmpl
@@ -1,5 +1,5 @@
 #!/bin/sh
 
 {{ range .docker.registries }}
-{{ onepasswordRead .password}} | docker login {{ .name }} --username {{ .username }} --password-stdin
+op read {{ .password | quote }} | docker login {{ .name }} --username {{ .username }} --password-stdin
 {{ end -}}
