Add command to open Orbstack app
Open Orbstack application before logging into Docker registries.

--- a/run_once_login-to-docker-reigstries.sh.tmpl
+++ b/run_once_login-to-docker-reigstries.sh.tmpl
@@ -1,5 +1,7 @@
 #!/bin/sh
 
+open -n /Applications/Orbstack.app
+
 {{ range .docker.registries }}
 op read {{ .password | quote }} | docker login {{ .name }} --username {{ .username }} --password-stdin
 {{ end -}}
