Hold untill docker is correctly installed

--- a/run_once_login-to-docker-reigstries.sh.tmpl
+++ b/run_once_login-to-docker-reigstries.sh.tmpl
@@ -2,6 +2,9 @@
 
 open -n /Applications/Orbstack.app
 
+read -s -p "Press any key when Orbstack is read and the docker command installed..."
+echo
+
 {{ range .docker.registries }}
 op read {{ .password | quote }} | docker login {{ .name }} --username {{ .username }} --password-stdin
 {{ end -}}
