Add op login hook

--- a/.chezmoi.toml.tmpl
+++ b/.chezmoi.toml.tmpl
@@ -7,6 +7,9 @@ encryption = "age"
 [hooks.read-source-state.pre]
     command = ".local/share/chezmoi/.initial-setup.sh"
 
+[hooks.apply.pre]
+    command = ".local/share/chezmoi/.signin-1password.sh"
+
 [age]
     command = "rage"
     identity = "~/.config/chezmoi/key.txt"
