--- a/run_onchange_configure-system.sh.tmpl
+++ b/run_onchange_configure-system.sh.tmpl
@@ -21,7 +21,7 @@ dockutil --add "/Applications/Warp.app/" --after "Slack" --label "Warp"
 # Tower
 dockutil --add "/Applications/Tower.app/" --after "Warp" --label "Tower"
 # Phpstorm
-dockutil --add "/Applications/PhpStorm.app/" --after "Tower" --label "PhpStorm"
+dockutil --add "/Users/matthiashamacher/Applications/PhpStorm.app/" --after "Tower" --label "PhpStorm"
 # Visual Studio Code
 dockutil --add "/Applications/Visual Studio Code.app/" --after "PhpStorm" --label "Visual Studio Code"
 
