Remove 1password prompt

--- a/.chezmoi.toml.tmpl
+++ b/.chezmoi.toml.tmpl
@@ -14,3 +14,6 @@ encryption = "age"
     command = "rage"
     identity = "~/.config/chezmoi/key.txt"
     recipient = "age1lw0as8ndy5emqhn87el2fr7kdwntmz8ylds73h8nqsjm3ygagc7s4jjr80"
+
+[onepassword]
+    prompt = false
